# ebook-gpt-translator

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  apichat.py  docxloader.py  download.py  environment.yml  epubloader.py  monitor.py  pyproject.toml  srtloader.py  translate.py  translation.yaml.example  txtloader.py  utils.py
.github/workflows/: python-docxloader.yml  python-epubloader.yml  python-srtloader.yaml  python-txtloader.yml
