[tool.poetry]
name = "ebook-gpt-translator"
version = "0.1.0"
description = ""
authors = ["ShenSheiBot <shensheibot@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
tqdm = "^4.66.2"
ebooklib = "^0.18"
bs4 = "^0.0.2"
python-docx = "^1.1.0"
pandas = "^2.2.1"
lxml = "^5.1.0"
openpyxl = "^3.1.2"
google-genai = "^0.1.0"
fastapi-poe = "0.0.48"
html5lib = "^1.1"
pyyaml = "^6.0.1"
boto3 = "^1.34.54"
litellm = "^1.48.6"
anthropic = "^0.36.2"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
